<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="more_cand">Click for more candidates.</string>
    <string name="close_cand">Close the popup candiates view.</string>
    <string name="app_name">LIME-HD</string>
    <string name="ime_name">LIME-HD</string>
    <string name="ime_setting">LIME-HD Settings</string>
    <string name="input_method">System Input Method</string>
    <string name="experienced_device">Experienced Device</string>
    <string name="license">License Agreement</string>
    <string name="license_detail">LIME-HD is an open framework inputmethod for Chinese Characters.\nIts objective is to provide Android user a flexible and convenience tools for the text input. We do not support and responsible for any illeage use of this application or its content.\nPlease  refer to http://code.google.com/p/limeime/ for the complete license information.</string>
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    <string name="word_symbol_separators">\u0020?\n{}&lt;&gt;_+|&quot;</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <string name="label_close_key">Close</string>
    <string name="lime_setting_btn_load_local_notice">Select .LIME or .CIN File</string>
    <string name="lime_setting_loading">Please do not close this window or program during data loading period</string>
    <string name="lime_setting_select_root"> - back to /</string>
    <string name="lime_setting_select_parent"> - back to ..</string>
    <string name="lime_loading_cancel">Cancel</string>
    <string name="lime_setting_notification_loading">Start Loading Mapping Table</string>
    <string name="lime_setting_notification_failed">Mapping Import Failed !!</string>
    <string name="lime_setting_notification_finish">Mapping Import Finished</string>
    <string name="lime_setting_notification_related">Start Building Related Words</string>
    <string name="lime_setting_notification_loading_start">LIME</string>
    <string name="lime_setting_notification_loading_end">mappings loaded.</string>
    <string name="lime_setting_notification_loading_build">Building </string>
    <string name="lime_setting_notification_loading_import">IM-table: </string>
    <string name="lime_setting_db">Mapping DB</string>
    <string name="lime_setting_preference">Preference</string>
    <string name="lime_setting_bluetooth">Bluetooth</string>
    <string-array name="keyboard">
		<item>Lime</item>
		<item>Changjei</item>
		<item>SChangjei</item>
		<item>Changjei5</item>
		<item>EazyChangjei</item>
		<item>Dayi</item>
		<item>Phonetic</item>
		<item>Eazy</item>
		<item>Array</item>
		<item>Array10</item>
		<item>Stroke5</item>
		<item>HS</item>
		<item>Pinyin</item>
	</string-array>
    <string name="Similiar">Similar</string>
    <string name="mapping">Mapping</string>
    <string name="keyboard_list">LIME Input Method</string>
    <string name="persistent_language_mode">Persistent language mode</string>
    <string name="persistent_language_mode_summary">Fixed the language mode before next swicthing.</string>
    <string name="number_row_in_english">Show number row in English mode</string>
    <string name="number_row_in_english_summary">Show number row in English keyboards (5 rows keyboard).</string>
    <string name="disable_software_keyboard">Display software keyboard</string>
    <string name="fixed_candidate_view_display">Fixed candidate view display</string>
    <string name="physical_keyboard">Physical keyboard selection</string>
    <string name="phonetic_keyboard">Phonetic keyboard selection</string>
    <string name="three_rows_remapping">3 Rows Keybaord Remapping</string>
    <string name="three_rows_remapping_summary">Mapping 1234567890-; to qwertyuiopv.</string>
    <string name="prediction_category">English word suggestion settings</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the start of a sentence</string>
    <string name="quick_fixes">Quick fixes</string>
    <string name="quick_fixes_summary">Corrects commonly typed mistakes</string>
    <string name="auto_complete">Auto-complete</string>
    <string name="auto_complete_summary">Spacebar and punctuation automatically insert highlighted word</string>
    <string name="im">Input Method</string>
    <string name="enable_english_dictionary">Enable English prediction</string>
    <string name="enable_english_dictionary_summary">Enable English prediction with English dictionary</string>
    <string name="enable_english_dictionary_physical_keyboard">Enable English prediction on physical keyboard</string>
    <string name="enable_english_dictionary_physical_keyboard_summary">Enable English prediction with English dictionary  on physical keyboard</string>
    <string name="im_reverse_lookup_list">R-Lookup Selection</string>
    <string name="default_reverse_lookup_list">R-Lookup in Custom</string>
    <string name="cj_reverse_lookup_list">R-Lookup in ChangJei</string>
    <string name="scj_reverse_lookup_list">R-Lookup in SChangJei</string>
    <string name="dayi_reverse_lookup_list">R-Lookup in Dayi</string>
    <string name="bpmf_reverse_lookup_list">R-Lookup in Phonetic</string>
    <string name="ez_reverse_lookup_list">R-Lookup in Eazy</string>
    <string name="array_reverse_lookup_list">R-Lookup in Array</string>
    <string name="array10_reverse_lookup_list">R-Lookup in Array10</string>
    <string name="cj5_reverse_lookup_list">R-Lookup in ChangJei5</string>
    <string name="ecj_reverse_lookup_list">R-Lookup in EazyChangJei</string>
    <string name="wb_reverse_lookup_list">R-Lookup in Stroke5</string>
    <string name="hs_reverse_lookup_list">R-Lookup in HS</string>
    <string name="pinyin_reverse_lookup_list">R-Lookup in PINYIN</string>
    <string name="han_convert_option_list">Chinese Characters Conversion</string>
    <string name="selkey_option_list">Candidate bar options</string>
    <string name="table_list">Table Selection</string>
    <string name="similiar_list">Suggestion display amount</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="display_number_keypads">Display number keypads</string>
    <string name="display_number_keypads_summary">Display number keypads</string>
    <string name="candidate_switch">Sliding select suggestion</string>
    <string name="candidate_switch_summary">Enable suggestion word sliding selection</string>
    <string name="similiar_enable_switch">Enable related words dictionary</string>
    <string name="similiar_enable_switch_summary">Enable related words dictionary</string>
    <string name="candidate_suggestion">Learn related words</string>
    <string name="candidate_suggestion_summary">Learn related words base on text input</string>
    <string name="learn_phrase">Learn phrases</string>
    <string name="learn_phrase_summary">Learn phrases from frequent selected related words.</string>
    <string name="learning_switch">Sort suggestions</string>
    <string name="learning_switch_summary">Sort suggestions base on learned frequency</string>
    <string name="physical_keyboard_sort">Sort suggestions when using keyboard</string>
    <string name="physical_keyboard_sort_summary">Sort suggestion list base on learned frequency, when using physical keyboard</string>
    <string name="accept_number_index">Mapping on numbers</string>
    <string name="accept_number_index_summary">Allow input 0–9 as mapping code</string>
    <string name="accept_symbol_index">Mapping on symbols</string>
    <string name="accept_symbol_index_summary">Allow punctuation as mapping code</string>
    <string name="switch_english_mode">Quick switch hotkey</string>
    <string name="switch_english_mode_summary">[SHIFT]+[SPACE] switch typing mode [Physical Keyboard]</string>
    <string name="typing_mode_english">Typing Mode / English</string>
    <string name="typing_mode_mixed">Typing Mode / Mixed</string>
    <string name="chinese_punctuation">「」！？、。，</string>
    <string name="added_word"><xliff:g id="word">%s</xliff:g> : Saved</string>
    <string name="alternates_for_a">àáâãäåæ</string>
    <string name="alternates_for_e">èéêë</string>
    <string name="alternates_for_i">ìíîï</string>
    <string name="alternates_for_o">òóôõöœø</string>
    <string name="alternates_for_u">ùúûü</string>
    <string name="alternates_for_s">§ß</string>
    <string name="alternates_for_n">ñ</string>
    <string name="alternates_for_c">ç</string>
    <string name="alternates_for_y">ýÿ</string>
    <string name="sentence_separators">.,;:!?</string>
    <string name="alternates_for_d"></string>
    <string name="alternates_for_r"></string>
    <string name="alternates_for_t"></string>
    <string name="alternates_for_z"></string>
    <string name="alternates_for_l"></string>
    <string name="alternates_for_g"></string>
    <string name="label_done_key">Done</string>
    <string name="label_symbol_key">123</string>
    <string name="label_alpha_key">ABC</string>
    <string name="label_alt_key">ALT</string>
    <string name="popular_domain_0">".com"</string>
    <string name="popular_domain_1">".net"</string>
    <string name="popular_domain_2">".tw"</string>
    <string name="popular_domain_3">".org"</string>
    <string name="popular_domain_4">".gov"</string>
    <string name="popular_domain_5">".edu"</string>
    <string-array name="han_convert_options">
		<item>none</item>
		<item>Traditional to Simplified</item>
		<item>Simplified to Traditional</item>
	</string-array>
	<string-array name="han_convert_options_values">
		<item>0</item>
		<item>1</item>
		<item>2</item>
	</string-array>
    <string name="l3_initial_btn_load_empty_db">Download empty db</string>
    <string name="l3_initial_btn_load_preload_db">Download full preloaded db  \n注音, 倉頡, 倉頡五代 \n快倉, 大易, 輕鬆　　\n行列, 行列 １０　 　</string>
    <string name="l3_initial_btn_reset_db">Reset DB</string>
    <string name="l3_initial_btn_store_device">DEVICE</string>
    <string name="l3_initial_btn_store_sdcard">SDCARD</string>
    <string name="l3_manage_default">Custom</string>
    <string name="l3_manage_phonetic">Phonetic</string>
    <string name="l3_manage_cj">Changjei</string>
    <string name="l3_manage_scj">SChangjei</string>
    <string name="l3_manage_dayi">Dayi</string>
    <string name="l3_manage_eazy">Eazy</string>
    <string name="l3_manage_array">Array</string>
    <string name="l3_manage_array10">Array10</string>
    <string name="l3_initial_backup_database">Backup DB</string>
    <string name="l3_initial_restore_database">Restore DB</string>
    <string name="font_size">Font Size</string>
    <string name="keyboard_size">Keyboard Size</string>
    <string name="vibrate_level">Vibrate level</string>
	<string name="auto_chinese_symbol">Auto fetching Chinese Symbols</string>
    <string name="auto_chinese_symbol_summary">Fetch Chinese Symbols when no suggestions present</string>
    <string name="auto_commit">Phone-KB Commit Composing</string>
    <string name="auto_commit_summary">Auto commit text when composing length meet the setting</string>
	<string name="disable_physical_selkey_option">Disable candidate words selection on physical keyboard</string>
	<string name="show_arrow_keys">Show arrow keys</string>
	<string name="hide_software_keyboard_typing_with_physical">Auto hide soft keyboard</string>
    <string name="hide_software_keyboard_typing_with_physical_summary">Hide soft keyboard when typing with physical keyboard. Please clear this when using with S-PEN.</string>
    <string name="split_keyboard">Split Keyboard</string>
</resources>