<?xml version="1.0" encoding="utf-8"?>

<!--
/*    
**    Copyright 2010, The LimeIME Open Source Project
** 
**    Project Url: http://code.google.com/p/limeime/
**    Official Url: http://android.toload.net/
**
**    This program is free software: you can redistribute it and/or modify
**    it under the terms of the GNU General Public License as published by
**    the Free Software Foundation, either version 3 of the License, or
**    (at your option) any later version.

**    This program is distributed in the hope that it will be useful,
**    but WITHOUT ANY WARRANTY; without even the implied warranty of
**    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
**    GNU General Public License for more details.

**    You should have received a copy of the GNU General Public License
**    along with this program.  If not, see <http://www.gnu.org/licenses/>.
*/
-->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
                android:key="lime_preference"
                android:title="LIME Preference"
                android:summary="LIME Preference Configuration">
    <PreferenceCategory
        xmlns:android="http://schemas.android.com/apk/res/android"
                android:key="lime_keyboard"
                android:title="@string/keyboard"
                android:summary="">
        <net.toload.main.hd.limesettings.MultiListPreference 
				android:key="keyboard_state"
				android:title="@string/keyboard_list"
				android:entries="@array/keyboard"
				android:entryValues="@array/keyboard_defaultstate"
				android:defaultValue="0;1;2;3;4;5;6;7;8;9;10;11"
				android:dialogTitle="@string/keyboard_list" />
		<CheckBoxPreference
                android:key="persistent_language_mode"
                android:title="@string/persistent_language_mode" 
                android:summary="@string/persistent_language_mode_summary"
            	android:defaultValue="false" 
                />
       <CheckBoxPreference
                android:key="number_row_in_english"
                android:title="@string/number_row_in_english" 
                android:summary="@string/number_row_in_english_summary"
            	android:defaultValue="true" 
                />
       <CheckBoxPreference
                android:key="hide_software_keyboard_typing_with_physical"
                android:title="@string/hide_software_keyboard_typing_with_physical"
                android:summary="@string/hide_software_keyboard_typing_with_physical_summary"
            	android:defaultValue="true" 
                />
       <ListPreference
                android:key="show_arrow_key"
                android:title="@string/show_arrow_keys"
             	android:entries="@array/show_arrow_keys_options" 
    			android:entryValues="@array/show_arrow_keys_values" 
    			android:dialogTitle="@string/show_arrow_keys" 
    			android:defaultValue="0"/>   
                />
       
       <ListPreference
                android:key="split_keyboard_mode"
                android:title="@string/split_keyboard" 
            	android:entries="@array/split_keyboard_options" 
    			android:entryValues="@array/split_keyboard_values" 
    			android:dialogTitle="@string/split_keyboard" 
    			android:defaultValue="0"/> 
                />
       
       <CheckBoxPreference
                android:key="fixed_candidate_view_display"
                android:title="@string/fixed_candidate_view_display" 
            	android:defaultValue="false" 
                />
       <ListPreference
    			android:key="keyboard_size"
    			android:title="@string/keyboard_size" 
    			android:entries="@array/five_size_scale_options" 
    			android:entryValues="@array/five_size_scale_values" 
    			android:dialogTitle="@string/keyboard_size" 
    			android:defaultValue="1"/>  
       <ListPreference
    			android:key="font_size"
    			android:title="@string/font_size" 
    			android:entries="@array/five_size_scale_options" 
    			android:entryValues="@array/five_size_scale_values" 
    			android:dialogTitle="@string/font_size" 
    			android:defaultValue="1"/>  
        <CheckBoxPreference
                android:key="vibrate_on_keypress"
                android:defaultValue="false" 
                android:title="@string/vibrate_on_keypress" />
         <ListPreference
    			android:key="vibrate_level"
    			android:title="@string/vibrate_level" 
    			android:entries="@array/vibrate_level_options" 
    			android:entryValues="@array/vibrate_level_values" 
    			android:dialogTitle="@string/vibrate_level" 
    			android:defaultValue="40"/>  
        <CheckBoxPreference
                android:key="sound_on_keypress"
                android:defaultValue="false" 
                android:title="@string/sound_on_keypress"/>
    </PreferenceCategory>
    
    <PreferenceCategory
        		xmlns:android="http://schemas.android.com/apk/res/android"
                android:summary="" android:key="lime_im" android:title="@string/im">
    <CheckBoxPreference
                android:key="auto_chinese_symbol"
                android:title="@string/auto_chinese_symbol" 
                android:summary="@string/auto_chinese_symbol_summary"
            	android:defaultValue="false" 
                />
	
	<CheckBoxPreference
                android:key="disable_physical_selkey"
                android:title="@string/disable_physical_selkey_option" 
            	android:defaultValue="false" 
                />
                
    <ListPreference
    			android:key="auto_commit"
    			android:title="@string/auto_commit" 
    			android:entries="@array/auto_commit_labels" 
    			android:entryValues="@array/auto_commit_values" 
    			android:dialogTitle="@string/auto_commit_summary" 
    			android:defaultValue="0"/>       
                
    <ListPreference
    			android:key="selkey_option"
    			android:title="@string/selkey_option_list" 
    			android:entries="@array/selkey_options" 
    			android:entryValues="@array/selkey_options_values" 
    			android:dialogTitle="@string/selkey_option_list" 
    			android:defaultValue="0"/>  
    <!-- CheckBoxPreference
                android:key="three_rows_remapping"
                android:title="@string/three_rows_remapping" 
                android:defaultValue="false" 
                android:summary="@string/three_rows_remapping_summary" /-->
    <ListPreference
    			android:key="phonetic_keyboard_type"
    			android:title="@string/phonetic_keyboard" 
    			android:entries="@array/phonetic_keyboard_type" 
    			android:entryValues="@array/phonetic_keyboard_type_values" 
    			android:dialogTitle="@string/phonetic_keyboard" 
    			android:defaultValue="standard"/>
    			
    <ListPreference
    			android:key="physical_keyboard_type"
    			android:title="@string/physical_keyboard" 
    			android:entries="@array/physical_keyboard_options" 
    			android:entryValues="@array/physical_keyboard_options_values" 
    			android:dialogTitle="@string/physical_keyboard" 
    			android:defaultValue="normal_keyboard"/>
    <ListPreference
    			android:key="han_convert_option"
    			android:title="@string/han_convert_option_list" 
    			android:entries="@array/han_convert_options" 
    			android:entryValues="@array/han_convert_options_values" 
    			android:dialogTitle="@string/han_convert_option_list" 
    			android:defaultValue="0"/> 
    <ListPreference
    			android:key="custom_im_reverselookup"
    			android:title="@string/default_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
    <ListPreference
    			android:key="cj_im_reverselookup"
    			android:title="@string/cj_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
    <ListPreference
    			android:key="scj_im_reverselookup"
    			android:title="@string/scj_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
    <ListPreference
    			android:key="cj5_im_reverselookup"
    			android:title="@string/cj5_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
    <ListPreference
    			android:key="ecj_im_reverselookup"
    			android:title="@string/ecj_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
    <ListPreference
    			android:key="dayi_im_reverselookup"
    			android:title="@string/dayi_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
    <ListPreference
    			android:key="bpmf_im_reverselookup"
    			android:title="@string/bpmf_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
    <ListPreference
    			android:key="ez_im_reverselookup"
    			android:title="@string/ez_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
   	<ListPreference
    			android:key="array_im_reverselookup"
    			android:title="@string/array_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
   	<ListPreference
    			android:key="array10_im_reverselookup"
    			android:title="@string/array10_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
    			
   	<ListPreference
    			android:key="wb_im_reverselookup"
    			android:title="@string/wb_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
   	<ListPreference
    			android:key="hs_im_reverselookup"
    			android:title="@string/hs_reverse_lookup_list" 
    			android:entries="@array/im_reverse_lookup" 
    			android:entryValues="@array/im_reverse_lookup_codes" 
    			android:dialogTitle="@string/im_reverse_lookup_list" 
    			android:defaultValue="none"/>
   
	</PreferenceCategory>
    
    <PreferenceCategory
        xmlns:android="http://schemas.android.com/apk/res/android"
                android:key="lime_mapping"
                android:title="@string/mapping"
                android:summary="">
        <ListPreference
				android:key="similiar_list"
				android:title="@string/similiar_list"
				android:entries="@array/similiar_codes"
				android:entryValues="@array/similiar_codes"
				android:dialogTitle="@string/similiar_list" 
				android:defaultValue="20"/>
        <CheckBoxPreference
                android:key="similiar_enable"
                android:title="@string/similiar_enable_switch"
                android:defaultValue="true"
                android:summary="@string/similiar_enable_switch_summary" />
        <CheckBoxPreference
                android:key="english_dictionary_enable"
                android:title="@string/enable_english_dictionary"
                android:defaultValue="true"
                android:summary="@string/enable_english_dictionary_summary" />
        <CheckBoxPreference
                android:key="english_dictionary_physical_keyboard"
                android:title="@string/enable_english_dictionary_physical_keyboard"
                android:defaultValue="false"
                android:summary="@string/enable_english_dictionary_physical_keyboard_summary" android:dependency="english_dictionary_enable"/>
        <CheckBoxPreference
                android:key="candidate_switch"
                android:title="@string/candidate_switch"
                android:defaultValue="true"
                android:summary="@string/candidate_switch_summary" />
        <CheckBoxPreference
                android:key="candidate_suggestion"
                android:title="@string/candidate_suggestion"
                android:defaultValue="true"
                android:summary="@string/candidate_suggestion_summary" />
         <CheckBoxPreference
                android:key="learn_phrase"
                android:title="@string/learn_phrase"
                android:defaultValue="true"
                android:summary="@string/learn_phrase_summary" />
        <CheckBoxPreference
                android:key="learning_switch"
                android:title="@string/learning_switch"
                android:defaultValue="true"
                android:summary="@string/learning_switch_summary" />
        <CheckBoxPreference
                android:key="physical_keyboard_sort"
                android:title="@string/physical_keyboard_sort"
                android:defaultValue="true"
                android:summary="@string/physical_keyboard_sort_summary" />
        <CheckBoxPreference
                android:key="accept_number_index"
                android:title="@string/accept_number_index"
                android:summary="@string/accept_number_index_summary" />
        <CheckBoxPreference
                android:key="accept_symbol_index"
                android:title="@string/accept_symbol_index"
                android:summary="@string/accept_symbol_index_summary" />
        <CheckBoxPreference
                android:key="switch_english_mode"
                android:title="@string/switch_english_mode"
                android:summary="@string/switch_english_mode_summary" />
    </PreferenceCategory>
    
</PreferenceScreen>

