<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<ScrollView android:id="@+id/scrollView1"
		android:layout_height="fill_parent" android:layout_width="fill_parent">
		<LinearLayout android:id="@+id/linearLayout1"
			android:layout_height="fill_parent" android:layout_width="fill_parent"
			android:layout_margin="10px" android:layout_gravity="center_vertical">
			<TableLayout android:id="@+id/tableLayout1"
				android:layout_height="fill_parent" android:layout_width="fill_parent">
				
				<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
					android:layout_height="wrap_content">

					<Button android:layout_width="fill_parent" android:layout_weight="1" android:layout_margin="5px"
						android:layout_height="wrap_content" android:text="@string/l3_initial_btn_store_device"
						android:id="@+id/btnStoreDevice" android:padding="5px"></Button>
					<Button android:layout_width="fill_parent" android:layout_weight="1" android:layout_margin="5px"
						android:layout_height="wrap_content" android:text="@string/l3_initial_btn_store_sdcard"
						android:id="@+id/btnStoreSdcard" android:padding="5px"></Button>
				</TableRow>
				<TableRow android:id="@+id/tableRow2"
					android:layout_height="wrap_content" android:layout_width="fill_parent">
					
					<Button android:layout_width="fill_parent" android:padding="5px" android:layout_weight="1" android:layout_margin="5px"
						android:layout_height="fill_parent" android:text="@string/l3_initial_btn_load_preload_db"
						android:id="@+id/btnInitPreloadDB"></Button>
				</TableRow>
				<TableRow android:id="@+id/tableRow3"
					android:layout_height="wrap_content" android:layout_width="fill_parent">
					<Button android:layout_width="fill_parent" android:padding="5px" android:layout_weight="1" android:layout_margin="5px"
						android:layout_height="fill_parent" android:text="@string/l3_initial_btn_load_empty_db"
						android:id="@+id/btnInitEmptyDB"></Button>
				</TableRow>
				<TableRow android:id="@+id/tableRow4"
					android:layout_height="wrap_content" android:layout_width="fill_parent">

					<Button android:layout_width="fill_parent" android:layout_weight="1" android:layout_margin="5px"
						android:layout_height="fill_parent" android:id="@+id/btnResetDB"
						android:text="@string/l3_initial_btn_reset_db" android:padding="5px"></Button>
					<Button android:layout_width="fill_parent" android:layout_weight="1" android:layout_margin="5px"
						android:layout_height="fill_parent" android:enabled="false"
						android:padding="5px"></Button>
				</TableRow>
				<TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content"
					android:layout_height="wrap_content">

					<Button android:layout_width="fill_parent" android:layout_weight="1" android:layout_margin="5px"
						android:layout_height="wrap_content" android:text="@string/l3_initial_backup_database"
						android:id="@+id/btnBackupDB" android:padding="5px"></Button>
					<Button android:layout_width="fill_parent" android:layout_weight="1" android:layout_margin="5px"
						android:layout_height="wrap_content" android:text="@string/l3_initial_restore_database"
						android:id="@+id/btnRestoreDB" android:padding="5px"></Button>
				</TableRow>
			</TableLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>



